fixed empty creator and empty owner error

--- a/templates/viewProject.html
+++ b/templates/viewProject.html
@@ -30,8 +30,14 @@
     <div class="pageheader" style="flex: none;">
       <h2 style="">{{project.title}}</h2>
       <p style="font-style: italic; color: #696969; line-height: 15px; padding-left: 10px;">
-        Owner: <a href="profile?profile_key={{project.owner.get().key.urlsafe()}}">
-          {{project.owner.get().firstname}} {{project.owner.get().lastname}}</a></p>
+        Owner:
+          {% if project.owner %}
+            <a href="profile?profile_key={{project.owner.get().key.urlsafe()}}">
+            {{project.owner.get().firstname}} {{project.owner.get().lastname}}</a>
+          {% else %}
+            None
+          {% endif %}
+        </p>
     </div>
     <div class="divider"></div>
     <div class="panelBox redborder">
