--- a/templates/updatepanel.html
+++ b/templates/updatepanel.html
@@ -30,8 +30,14 @@
     <div class="pageheader">
       <h2 style="">{{project.title}}: Panel {{panel.panel_id}}</h2>
       <p style="font-style: italic; color: #696969; line-height: 15px; padding-left: 10px;">
-        Creator: <a href="profile?profile_key={{panel.creator.get().key.urlsafe()}}">
-          {{panel.creator.get().email}}</a></p>
+        Creator:
+        {% if panel.creator %}
+          <a href="profile?profile_key={{panel.creator.get().key.urlsafe()}}">
+          {{panel.creator.get().email}}</a>
+        {% else %}
+          None
+        {% endif %}
+      </p>
     </div>
     <div class="divider"></div>
     <div class="panelBox redborder">
@@ -56,7 +62,7 @@
 
       </div>
       <div style="padding: 5px; margin: 10px;">
-        {% if current_person.email == panel.creator.get().email %}
+        {% if not panel.creator or current_person.email == panel.creator.get().email %}
         <form action="uploadphoto" method="POST" enctype="multipart/form-data">
           <div style="display: none;">
             <input name="key" value="{{panel.key.urlsafe()}}">
