--- a/templates/profile.html
+++ b/templates/profile.html
@@ -8,6 +8,7 @@
     <img class="logo" src="../photos/logo.png">
     <p>QUILTIFY</p>
   </div>
+
   <div class="userbox">
     {% if current_user %}
       {% if current_person %}
@@ -16,7 +17,6 @@
         <p>{{current_user.email()}}</p>
       {% else %}
         <div class="createaccount">
-
           <div id="input_box" class="box_card">
             <form method="post" action="/profile">
               Your name: <input name="firstname" value="First" onclick="this.select()">
@@ -34,6 +34,8 @@
     {% endif %}
   </div>
 </div>
+
+
 
 <div class="pagebody">
 
@@ -55,6 +57,7 @@
     </div>
   </div>
 
+
   <div class="content redborder">
 
     <div class="pageheader">
@@ -66,8 +69,11 @@
         {% endif %}
       </div>
     </div>
-    <div class="divider">
-    </div>
+
+
+    <div class="divider"></div>
+
+
     <div class="listprojects">
       {% if projects %}
         {% for project in projects %}
