--- a/templates/viewProject.html
+++ b/templates/viewProject.html
@@ -45,7 +45,7 @@
       </div>
       <div style="float: right">
         {% if project.owner.get().email == current_person.email %}
-          <a href="" class="pageheaderbutton">
+          <a href="/edittitle" class="pageheaderbutton">
           Edit</a><br>
           <a href="" class="pageheaderbutton">
           Delete</a>
