panel hover to display panelid and creator

--- a/stylesheets/stylesheet.css
+++ b/stylesheets/stylesheet.css
@@ -218,6 +218,69 @@ a.logo {
   font-size: 15px;
 }
 
+.projectpanel {
+  background-color: gainsboro;
+  margin: 5px;
+}
+
+.hoverTextPanel {
+  height: 200px;
+  width: 200px;
+  transition: .5s ease;
+  opacity: 0;
+  transform: translate(-50%, -50%);
+  -ms-transform: translate(-50%, -50%);
+  position: absolute;
+  margin-left: 100px;
+  margin-top: 100px;
+  color: black;
+  text-align: center;
+
+}
+
+img.panelimg {
+  opacity: 1;
+  transition: .5s ease;
+  backface-visibility: hidden;
+}
+
+.projectpanel:hover img.panelimg {
+  opacity: 0.15;
+  backface-visibility: hidden;
+}
+
+.projectpanel:hover .hoverTextPanel {
+  opacity: 1;
+}
+
+object.previewobject {
+  opacity: 1;
+  transition: .5s ease;
+  backface-visibility: hidden;
+}
+
+.hoverText {
+  height: 400px;
+  width: 400px;
+  transition: .5s ease;
+  opacity: 0;
+  transform: translate(-50%, -50%);
+  -ms-transform: translate(-50%, -50%);
+  position: absolute;
+  margin-left: 200px;
+  margin-top: 200px;
+  color: black;
+
+}
+
+.artworks.redborder:hover object.previewobject {
+  opacity: 0.3;
+}
+
+.artworks.redborder:hover .hoverText {
+  opacity: 1;
+}
+
 .panel {
   background-color: gainsboro;
   margin: 5px;
