--- a/stylesheets/stylesheet.css
+++ b/stylesheets/stylesheet.css
@@ -223,6 +223,10 @@ a.logo {
   margin: 5px;
 }
 
+.projectpanel:hover {
+  cursor: pointer;
+}
+
 .hoverTextPanel {
   height: 200px;
   width: 200px;
