--- a/templates/preview.html
+++ b/templates/preview.html
@@ -13,26 +13,26 @@ body {
     {% set columns = project.columns %}
       {% if count%(columns)==1 %}
         <tr>
-          <td class="artworks redborder" style="font-size: 20px; vertical-align: top; text-align: center;" scroll="no">
+          <td class="artworks redborder" style="font-size: 20px; vertical-align: middle; text-align: center;" scroll="no">
             <div class="panel">
               {% if panel.filled %}
-                <img width="100%" src="/photo?key={{panel.key.urlsafe()}}"
+                <img width="90"width="100%" src="/photo?key={{panel.key.urlsafe()}}"
                 alt="PANEL CONTENT">
               {% else %}
-                <img width="100%" src="../photos/upload.png">
+                <img width="90" src="../photos/upload.png">
               {% endif %}
             </div>
           </td>
           {% set count = count+1 %}
 
       {% elif count%(columns)==columns %}
-        <td class="artworks redborder" style="font-size: 20px; vertical-align: top; text-align: center;" scroll="no">
+        <td class="artworks redborder" style="font-size: 20px; vertical-align: middle; text-align: center;" scroll="no">
           <div class="panel">
             {% if panel.filled %}
-              <img width="100%" src="/photo?key={{panel.key.urlsafe()}}"
+              <img width="90" src="/photo?key={{panel.key.urlsafe()}}"
               alt="PANEL CONTENT">
               {% else %}
-              <img width="100%" src="../photos/upload.png">
+              <img width="90" src="../photos/upload.png">
               {% endif %}
             </div>
         </td>
@@ -40,13 +40,13 @@ body {
         {% set count = count+1 %}
 
       {% else %}
-        <td class="artworks redborder" style="font-size: 20px; vertical-align: top; text-align: center;" scroll="no">
+        <td class="artworks redborder" style="font-size: 20px; vertical-align: middle; text-align: center;" scroll="no">
           <div class="panel">
             {% if panel.filled %}
-              <img width="100%" src="/photo?key={{panel.key.urlsafe()}}"
+              <img width="90" src="/photo?key={{panel.key.urlsafe()}}"
               alt="PANEL CONTENT">
             {% else %}
-              <img width="100%" src="../photos/upload.png">
+              <img width="90" src="../photos/upload.png">
             {% endif %}
           </div>
         </td>
