line height deleted

--- a/templates/home.html
+++ b/templates/home.html
@@ -3,11 +3,6 @@
 <link rel="stylesheet" href="../stylesheets/stylesheet.css">
 <link href="https://fonts.googleapis.com/css?family=Open+Sans|Quicksand" rel="stylesheet">
 
-<style>
-h2 {
-
-}
-</style>
 
 <div class="heading">
   <div class="webtitle" onclick="location.href='/'">
@@ -65,7 +60,7 @@ h2 {
 
               <div class="hoverText">
                 <br></br><br></br>
-                <h2>Project title: {{project.title}}</h2>
+                <p>Project title: {{project.title}}</p>
                 <br></br>
                 <h3>Owner: {{project.owner.get().firstname}} {{project.owner.get().lastname}}</h3>
                 <h6><i>Date created: {{project.created_time}}</i></h6>
