--- a/templates/home.html
+++ b/templates/home.html
@@ -67,7 +67,8 @@
 
               </div>
 
-              <object class="previewobject" type="text/html" data="/preview?key={{project.key.urlsafe()}}" width="100%" height="100%" background-size="contain">
+              <object class="previewobject" type="text/html" data="/preview?key={{project.key.urlsafe()}}"
+              width="100%" height="100%" background-size="contain">
               </object>
               <h2><a href="/viewproject?key={{project.key.urlsafe()}}">EDIT</a></h2>
             </td>
@@ -85,7 +86,8 @@
 
               </div>
 
-              <object class="previewobject" type="text/html" data="/preview?key={{project.key.urlsafe()}}" style="width: 100%; height: 100%; display: table-cell;">
+              <object class="previewobject" type="text/html" data="/preview?key={{project.key.urlsafe()}}"
+              style="width: 100%; height: 100%; display: table-cell;">
               </object>
               <h2><a href="/viewproject?key={{project.key.urlsafe()}}">EDIT</a></h2>
             </td>
