--- a/templates/updatepanel.html
+++ b/templates/updatepanel.html
@@ -28,7 +28,7 @@
   <div class="content">
 
     <div class="pageheader">
-      <h2 style="">{{project.title}}: Panel {{panel.panel_id}}</h2>
+      <h2 style="line-height: 5px;">{{project.title}}: Panel {{panel.panel_id}}</h2>
       <p style="font-style: italic; color: #696969; line-height: 15px; padding-left: 10px;">
         Creator:
         {% if panel.creator %}
