--- a/templates/viewProject.html
+++ b/templates/viewProject.html
@@ -32,7 +32,7 @@
 
     <div class="pageheader" style="flex: none; height: 70px">
       <div style="float: left">
-        <h2 style="">{{project.title}}</h2>
+        <h2 style="line-height: 5px">{{project.title}}</h2>
         <p style="font-style: italic; color: #696969; line-height: 15px; padding-left: 10px;">
           Owner:
           {% if project.owner %}
