squares on homepage

--- a/templates/preview.html
+++ b/templates/preview.html
@@ -15,10 +15,10 @@ body {
           <td class="artworks redborder" style="font-size: 20px; vertical-align: middle; text-align: center;" scroll="no">
             <div class="panel">
               {% if panel.filled %}
-                <img width="90"width="100%" src="/photo?key={{panel.key.urlsafe()}}"
+                <img width="90" height="90" src="/photo?key={{panel.key.urlsafe()}}"
                 alt="PANEL CONTENT">
               {% else %}
-                <img width="90" src="../photos/upload.png">
+                <img width="90" height="90" src="../photos/upload.png">
               {% endif %}
             </div>
           </td>
@@ -28,10 +28,10 @@ body {
         <td class="artworks redborder" style="font-size: 20px; vertical-align: middle; text-align: center;" scroll="no">
           <div class="panel">
             {% if panel.filled %}
-              <img width="90" src="/photo?key={{panel.key.urlsafe()}}"
+              <img width="90" height="90" src="/photo?key={{panel.key.urlsafe()}}"
               alt="PANEL CONTENT">
               {% else %}
-              <img width="90" src="../photos/upload.png">
+              <img width="90" height="90" src="../photos/upload.png">
               {% endif %}
             </div>
         </td>
@@ -42,10 +42,10 @@ body {
         <td class="artworks redborder" style="font-size: 20px; vertical-align: middle; text-align: center;" scroll="no">
           <div class="panel">
             {% if panel.filled %}
-              <img width="90" src="/photo?key={{panel.key.urlsafe()}}"
+              <img width="90" height="90" src="/photo?key={{panel.key.urlsafe()}}"
               alt="PANEL CONTENT">
             {% else %}
-              <img width="90" src="../photos/upload.png">
+              <img width="90" height="90" src="../photos/upload.png">
             {% endif %}
           </div>
         </td>
