minior bug fixes

--- a/templates/home.html
+++ b/templates/home.html
@@ -60,7 +60,7 @@
             <div onclick="location.href='/viewproject?key={{project.key.urlsafe()}}'">
               <div class="hoverText">
                 <br></br><br>
-                <h2>Project title: {{project.title}}</h2>
+                <h2>{{project.title}}</h2>
                 <br>
                 <h3>Owner: {{project.owner.get().firstname}} {{project.owner.get().lastname}}</h3>
                 <h6><i>Date created: {{project.created_time}}</i></h6>
