--- a/templates/updatepanel.html
+++ b/templates/updatepanel.html
@@ -65,17 +65,20 @@
         </div>
 
       </div>
+
       <div style="padding: 5px; margin: 10px;">
-        {% if not panel.creator or current_person.email == panel.creator.get().email or
-          current_person.email == project.owner.get().email%}
-        <form action="uploadphoto" method="POST" enctype="multipart/form-data">
-          <div style="display: none;">
-            <input name="key" value="{{panel.key.urlsafe()}}">
-          </div>
-          Upload File: <br>
-          <input type="file" name="file"><br>
-          <input type="submit" name="submit" value="Submit">
-        </form>
+        {% if current_user %}
+          {% if not panel.creator or current_person.email == panel.creator.get().email or
+            current_person.email == project.owner.get().email %}
+          <form action="uploadphoto" method="POST" enctype="multipart/form-data">
+            <div style="display: none;">
+              <input name="key" value="{{panel.key.urlsafe()}}">
+            </div>
+            Upload File: <br>
+            <input type="file" name="file"><br>
+            <input type="submit" name="submit" value="Submit">
+          </form>
+          {% endif %}
         {% endif %}
         <br>
       </div>
